api call connection

--- a/MyBookStoreApp/angular.json
+++ b/MyBookStoreApp/angular.json
@@ -123,5 +123,8 @@
       }
     }
   },
-  "defaultProject": "MyBookStoreApp"
+  "defaultProject": "MyBookStoreApp",
+  "cli": {
+    "analytics": false
+  }
 }
